<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.dotweblabs</groupId>
  <artifactId>friendscube</artifactId>
  <packaging>war</packaging>
  <version>1.0</version>
  <name>Friendscube SNS</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <version.gwt>2.7.0</version.gwt>
    <version.errai>3.2.0.Final</version.errai>
    <gae.version>1.9.18</gae.version>
    <gae.home>${settings.localRepository}/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk/appengine-java-sdk-${gae.version}</gae.home>
    <gae.application.version>test</gae.application.version>
    <version.restlet>2.3.4</version.restlet>
    <version.junit>4.11</version.junit>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.jboss.spec</groupId>
      <artifactId>jboss-javaee-6.0</artifactId>
      <version>1.0.0.Final</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>
    <!-- Google App Engine -->
      <dependency>
          <groupId>com.google.appengine</groupId>
          <artifactId>appengine-api-labs</artifactId>
          <version>${gae.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.google.appengine</groupId>
          <artifactId>appengine-api-stubs</artifactId>
          <version>${gae.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.google.appengine</groupId>
          <artifactId>appengine-testing</artifactId>
          <version>${gae.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.google.appengine.tools</groupId>
          <artifactId>appengine-gcs-client</artifactId>
          <version>RELEASE</version>
      </dependency>
      <!-- GWT libraries -->
      <dependency>
          <!-- this library provides classes required by GWT-RPC servlets on the server -->
          <groupId>com.google.gwt</groupId>
          <artifactId>gwt-servlet</artifactId>
          <version>${version.gwt}</version>
          <scope>runtime</scope>
      </dependency>
      <dependency>
          <groupId>com.google.gwt</groupId>
          <artifactId>gwt-user</artifactId>
          <version>${version.gwt}</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt-codeserver</artifactId>
        <version>${version.gwt}</version>
      </dependency>
      <dependency>
          <groupId>com.google.gwt</groupId>
          <artifactId>gwt-elemental</artifactId>
          <version>${version.gwt}</version>
      </dependency>
      <dependency>
          <groupId>com.googlecode.gwtquery</groupId>
          <artifactId>gwtquery</artifactId>
          <version>1.4.2</version>
      </dependency>
      <!-- Errai Dependencies -->
      <dependency>
          <groupId>org.jboss.errai</groupId>
          <artifactId>errai-jpa-client</artifactId>
          <version>${version.errai}</version>
      </dependency>
      <dependency>
          <groupId>org.jboss.errai</groupId>
          <artifactId>errai-ui</artifactId>
          <version>${version.errai}</version>
      </dependency>
      <dependency>
          <groupId>org.jboss.errai</groupId>
          <artifactId>errai-data-binding</artifactId>
          <version>${version.errai}</version>
      </dependency>
      <dependency>
          <groupId>org.jboss.errai</groupId>
          <artifactId>errai-cdi-client</artifactId>
          <version>${version.errai}</version>
      </dependency>
      <dependency>
          <groupId>org.jboss.errai</groupId>
          <artifactId>errai-navigation</artifactId>
          <version>${version.errai}</version>
      </dependency>
      <!-- Restlet -->
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.jackson</artifactId>
          <version>2.2.0</version>
      </dependency>
      <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
          <version>2.5</version>
      </dependency>
      <dependency>
          <groupId>io.fastjson</groupId>
          <artifactId>boon</artifactId>
          <version>0.30</version>
      </dependency>
      <dependency>
          <groupId>com.postmark</groupId>
          <artifactId>postmark-client</artifactId>
          <version>0.3.3</version>
      </dependency>
      <dependency>
          <groupId>com.google.inject</groupId>
          <artifactId>guice</artifactId>
          <version>3.0</version>
      </dependency>
      <dependency>
          <groupId>com.google.inject.extensions</groupId>
          <artifactId>guice-servlet</artifactId>
          <version>3.0</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet</artifactId>
          <version>${version.restlet}</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.gae</artifactId>
          <version>2.3-M2</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.servlet</artifactId>
          <version>${version.restlet}</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.swagger</artifactId>
          <version>${version.restlet}</version>
          <exclusions>
              <exclusion>
                  <groupId>org.raml</groupId>
                  <artifactId>raml-parser</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.xstream</artifactId>
          <version>${version.restlet}</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.json</artifactId>
          <version>${version.restlet}</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.gwt</artifactId>
          <version>2.2-RC3</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gwt</groupId>
          <artifactId>org.restlet</artifactId>
          <version>${version.restlet}</version>
          <exclusions>
              <exclusion>
                  <groupId>com.google.gwt</groupId>
                  <artifactId>gwt-dev</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>org.restlet.gwt</groupId>
          <artifactId>org.restlet.ext.json</artifactId>
          <version>2.2.2</version>
      </dependency>
      <dependency>
          <groupId>com.seanchenxi.gwt</groupId>
          <artifactId>gwt-storage</artifactId>
          <version>1.3.1-SNAPSHOT</version>
      </dependency>
      <dependency>
          <groupId>com.auth0</groupId>
          <artifactId>java-jwt</artifactId>
          <version>2.0.1</version>
      </dependency>
      <!-- Twist Object Mapping -->
      <dependency>
          <groupId>com.hunchee</groupId>
          <artifactId>twist</artifactId>
          <version>0.0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
          <groupId>org.restlet.gae</groupId>
          <artifactId>org.restlet.ext.apispark</artifactId>
          <version>${version.restlet}</version>
          <exclusions>
              <exclusion>
                  <groupId>com.fasterxml.jackson.core</groupId>
                  <artifactId>jackson-databind</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <!--<version>2.5.1</version>-->
          <version>2.2.4</version>
      </dependency>
      <dependency>
          <groupId>org.mindrot</groupId>
          <artifactId>jbcrypt</artifactId>
          <version>0.3m</version>
      </dependency>
      <dependency>
          <groupId>com.carlosbecker</groupId>
          <artifactId>guice-junit-test-runner</artifactId>
          <version>1.1</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>${version.junit}</version>
          <scope>test</scope>
      </dependency>
      <!-- Test Data -->
      <dependency>
          <groupId>org.fluttercode.datafactory</groupId>
          <artifactId>datafactory</artifactId>
          <version>0.8</version>
      </dependency>
  </dependencies>
  <profiles>
      <profile>
          <id>gae</id>
          <build>
              <plugins>
                  <plugin>
                      <groupId>com.google.appengine</groupId>
                      <artifactId>appengine-maven-plugin</artifactId>
                      <version>${gae.version}</version>
                      <configuration>
                          <enableJarClasses>false</enableJarClasses>
                          <port>8080</port>
                      </configuration>
                  </plugin>
                  <plugin>
                      <groupId>org.codehaus.mojo</groupId>
                      <artifactId>gwt-maven-plugin</artifactId>
                      <version>${version.gwt}</version>
                      <executions>
                          <execution>
                              <!-- gwt:compile happens just before package phase -->
                              <phase>prepare-package</phase>
                              <goals>
                                  <goal>compile</goal>
                              </goals>
                          </execution>
                      </executions>
                      <configuration>
                          <modules>
                              <!-- gwt module inherits Core gwt module therefore both will be gwt:compiled -->
                              <module>com.dotweblabs.friendscube.app.App</module>
                          </modules>
                          <logLevel>DEBUG</logLevel>
                          <style>PRETTY</style>
                          <runTarget>app.html</runTarget>
                          <appEngineVersion>${gae.version}</appEngineVersion>
                          <!-- tell the gwt plugin that the webapp source resides in src/main/webapp -->
                          <webappDirectory>${webappDirectory}</webappDirectory>
                          <!-- tell the gwt plugin that dev mode should be run using the webapp that resides in target/${webappDirectory} -->
                          <hostedWebapp>${webappDirectory}</hostedWebapp>
                          <!-- Normally the gwt maven plugin executes dev mode using a builtin jetty server.
                               This config property instructs the gwt maven plugin to execute dev mode using the
                               jetty server supplied by the appengine sdk. -->
                          <server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server>
                          <strict>false</strict>
                          <disableCastChecking>true</disableCastChecking>
                          <draftCompile>true</draftCompile>
                          <localWorkers>4</localWorkers>
                          <optimizationLevel>0</optimizationLevel> <!-- 0 to 9 -->
                          <extraJvmArgs>-Xmx4096M -Xms4096m -XX:PermSize=256m -XX:MaxPermSize=2048m</extraJvmArgs>
                          <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
                      </configuration>
                  </plugin>
                  <plugin>
                      <artifactId>maven-clean-plugin</artifactId>
                      <version>2.4.1</version>
                      <configuration>
                          <filesets>
                              <fileset>
                                  <directory>${basedir}</directory>
                                  <includes>
                                      <include>www-test/**</include>
                                      <include>.gwt/**</include>
                                      <include>.errai/**</include>
                                      <include>src/main/webapp/app/**</include>
                                      <include>src/main/webapp/WEB-INF/deploy/**</include>
                                      <include>src/main/webapp/WEB-INF/lib/**</include>
                                      <include>src/main/webapp/WEB-INF/classes/**</include>
                                      <include>**/gwt-unitCache/**</include>
                                      <include>**/*.JUnit/**</include>
                                  </includes>
                              </fileset>
                          </filesets>
                      </configuration>
                  </plugin>
              </plugins>
          </build>
      </profile>
  </profiles>

    <repositories>
        <repository>
            <id>maven-restlet</id>
            <name>Public online Restlet repository</name>
            <url>http://maven.restlet.com</url>
        </repository>
        <!-- Needed by ApiSpark due to RAML dependency-->
        <repository>
            <id>mulesoft-releases</id>
            <name>MuleSoft Releases Repository</name>
            <url>https://repository-master.mulesoft.org/releases/</url>
        </repository>
        <repository>
            <id>sonatype.snapshots</id>
            <name>Sonatype snapshot repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <layout>default</layout>
        </repository>
        <!-- JCenter Snapshot repository -->
        <repository>
           <id>oss-jfrog-artifactory-snapshots</id>
           <name>oss-jfrog-artifactory-snapshots</name>
           <url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
        </repository>
    </repositories>
</project>
